<resources>
    <string name="app_name">Messagewrite</string>
    <string name="title_chats">Chats</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>
    <string name="login">Login</string>
    <string name="menu_chat_add">New chat</string>
    <string name="profile_image">Profile image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Sign up</string>
    <string name="name">Name</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_contact">Add new contact</string>
</resources>