<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_border"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="4dp"
        app:chipSpacing="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:singleSelection="true"
        app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/navigation_chats"
                style="@style/NavigationChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_chats"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/navigation_contacts"
                style="@style/NavigationChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_contacts"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/navigation_settings"
                style="@style/NavigationChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"/>

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>